public abstract class Flugmitarbeiter {
}
