public class Flugzeug {
}
